2005-11-22  Andrew Cagney  <cagney@redhat.com>

	* configure.ac: Include common/version.ac.  Update AC_INIT to
	frysk-imports FRYSK_VERSION.

2005-11-21  Stan Cox  <scox@redhat.com>

	* Makefile.am (SUBDIRS): Add frysk.
	* autogen.sh: Likewise.
	* configure.ac (AC_CONFIG_FILES): Likewise.
	* frysk/Config.javain: Moved from frysk-core/frysk.
	* frysk/Makefile.am: New file.
	* frysk/configure.ac: New file.

2005-11-21  Rick Moseley  <rmoseley@redhat.com>
	* Makefile.am: added cdtparser compiler compilation
	* configure.ac: ditto
	* autogen.sh: ditto

2005-11-21    <moller@mollerware.com>

	* Makefile.am: Added tlwidgets to SUBDIRS.
	* configure.ac: Added tlwidgets/Makefile to AC_CONFIG_FILES.

2005-11-16  Igor Foox  <ifoox@redhat.com>

	* configure.ac: Added 3.0.1 eclipse search path for cdtparser.jar.
	
2005-11-15  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (solib_PROGRAMS): Rename solib_DATA.

2005-11-14  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (LIBJUNIT): Delete.
	
	* Makefile.am (GEN_GCJ_LDADD, GEN_CLASSPATH): Add junit.
	
	* Makefile.am (GEN_GCJ_LDADD): Add frysk- prefix to all libraries.

2005-11-10  Andrew Cagney  <cagney@redhat.com>

	* configure.ac (AC_CONFIG_FILES): Remove tlwidgets/Makefile.
	* Makefile.am (SUBDIRS): Remove tlwidgets.

2005-11-09    <moller@mollerware.com>

	* Makefile.am: Added tlwidgets to SUBDIRS.
	* configure.ac: Added tlwidgets/Makefile to AC_CONFIG_FILES.

2005-11-09  Igor Foox  <ifoox@redhat.com>

	* autogen.sh, configure.ac: Changed to use cdtparser.jar from
	eclipse-cdt package.

2005-11-03  Adam Jocksch  <ajocksch@redhat.com>

	* test/SourceWinRunner.java (main): Now uses paths out of Config.java.
	(mainSourceWin): Uses same process as main.

2005-11-03  Igor Foox  <ifoox@redhat.com>

    * autogen.sh: Added -I common/m4 to aclocal invokation.

	* configure.ac: Added detecton for x86_64 that adds /opt/frysk/lib64 to
	PKG_CONFIG_PATH.

2005-10-21  Andrew Cagney  <cagney@redhat.com>
