@@ -1,5 +1,8 @@
 2005-11-22  Andrew Cagney  <cagney@redhat.com>
 
+	* configure.ac (AC_CONFIG_FILES): Delete frysk/Makefile.
+	* Makefile.am (SUBDIRS): Delete frysk.
+
 	* configure.ac: Include common/version.ac.  Update AC_INIT to
 	frysk-imports FRYSK_VERSION.
 
